Fixed Overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,6 +352,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   padding: 130px 0 40px 0;
   background-color: #42e077;
+  overflow: visible;
 }
 
 #hero h1 {
